welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:0: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:3: error: not found: value c
	marque(d);avance();marque(Color.YELLOW);avance();marque(d);recule();droite();avance();marque(c);recule(2);marque(d);
                                                                                                     ^